--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@mui/material": "^5.14.10",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "lodas": "^1.2.0",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-lodash": "^0.1.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8"
   }
 }
