--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-lodash": "^0.1.2",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8"
   }
